--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
+VITE_IK_URL_ENDPOINT=https://ik.imagekit.io/sahalkit/
+VITE_IK_PUBLIC_KEY=public_MFRTffYy6IuwyioH1q6KfMaKLmE=
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_cmFyZS1ld2UtMzQuY2xlcmsuYWNjb3VudHMuZGV2JA
+VITE_API_URL =http://localhost:3000/
