--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 VITE_IK_URL_ENDPOINT=https://ik.imagekit.io/sahalkit/
 VITE_IK_PUBLIC_KEY=public_MFRTffYy6IuwyioH1q6KfMaKLmE=
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_cmFyZS1ld2UtMzQuY2xlcmsuYWNjb3VudHMuZGV2JA
-VITE_API_URL =http://localhost:3000/
+
+VITE_API_URL=https://server-1mpk.onrender.com
